--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Jiwon’s Bioinformatics Study"
+title: "Jiwon’s Bioinformatics Study 🧬"
 description: "A journey to become a Bioinformatics Scientist"
 theme: minima
 baseurl: "/bioinformatics-study"
